fix too big padding-bottom in features__wrapper

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -364,6 +364,7 @@ footer {
     }
     .features__wrapper {
         padding: 5rem 2.5rem;
+        padding-bottom: 0;
         flex-direction: row;
         .features__item {
             h3 {
